# azure_storage_log_viewer

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
screens/: credentials.py  logs_viewer.py
src/azure_log_viewer/: app.py
src/azure_log_viewer/helpers/: download_from_file_path.py  obtain_files_paths.py
src/azure_log_viewer/screens/: logs_viewer.py
src/azure_log_viewer/utils/: logs_files_processing.py
utils/: logs_files_processing.py
validations/: ip_validations.py  time_validations.py
widgets/: azure_directory_tree.py
